--- a/default.conf
+++ b/default.conf
@@ -1,41 +1,75 @@
 server {
-    server_name appleishop.ru www.appleishop.ru;
-    root /var/www/html/opencart3038rus;
-    index index.php;
-    access_log /var/log/nginx/opencart_access.log;
-    error_log /var/log/nginx/opencart_error.log;
+	server_name appleishop.ru www.appleishop.ru;
+	root /var/www/html/opencart3038rus;
+	index index.php;
+	access_log /var/log/nginx/opencart_access.log;
+	error_log /var/log/nginx/opencart_error.log;
 
-    location = /favicon.ico {
-        log_not_found off;
-        access_log off;
+	rewrite /admin$ $scheme://$host$uri/ permanent;
+
+	location /
+	{
+		try_files $uri $uri/ @opencart;
+	}
+
+	location @opencart
+	{
+		rewrite ^/(.+)$ /index.php?_route_=$1 last;
+	}
+
+
+	location /admin
+	{
+		index index.php;
+	}
+
+	rewrite ^/sitemap.xml$ /index.php?route=feed/google_sitemap last;
+	rewrite ^/googlebase.xml$ /index.php?route=feed/google_base last;
+	rewrite ^/download/(.*) /index.php?route=error/not_found last;
+
+	location = /favicon.ico
+	{
+		access_log off; log_not_found off;
+	}
+	location = /robots.txt
+	{
+		access_log off; log_not_found off;
+	}
+
+	sendfile off;
+
+	location ~ \.php$ {
+    if (!-e $request_filename){
+        rewrite ^/(.+)$ /index.php?_route_=$1 last;
     }
+    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
 
-    location = /robots.txt {
-        allow all;
-        log_not_found off;
-        access_log off;
-    }
+    fastcgi_pass unix:/run/php/php7.4-fpm.sock;
+    fastcgi_index index.php;
+    include fastcgi_params;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    fastcgi_intercept_errors on;
+    fastcgi_buffer_size 16k;
+    fastcgi_buffers 4 16k;
+}
 
-    location / {
-        try_files $uri $uri/ /index.php?$args;
-    }
+	location ~ /\.ht
+	{
+		deny all;
+	}
 
-    location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/run/php/php7.4-fpm.sock;
-    }
-
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
-        expires max;
-        log_not_found off;
-    }
+	location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$
+	{
+		expires max;
+		log_not_found off;
+	}
 
 
-    listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/appleishop.ru/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/appleishop.ru/privkey.pem; # managed by Certbot
-    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+	listen 443 ssl; # managed by Certbot
+	ssl_certificate /etc/letsencrypt/live/appleishop.ru/fullchain.pem; # managed by Certbot
+	ssl_certificate_key /etc/letsencrypt/live/appleishop.ru/privkey.pem; # managed by Certbot
+	include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 
 }
