--- a/default.conf
+++ b/default.conf
@@ -1,11 +1,12 @@
-server {
+server
+{
 	server_name appleishop.ru www.appleishop.ru;
-	root /var/www/html/opencart3038rus;
+	root /var/www/html/opencart4011rus;
 	index index.php;
-	access_log /var/log/nginx/opencart_access.log;
+	access_log off;
 	error_log /var/log/nginx/opencart_error.log;
 
-	rewrite /admin$ $scheme://$host$uri/ permanent;
+	rewrite /adminappleishop$ $scheme://$host$uri/ permanent;
 
 	location /
 	{
@@ -18,7 +19,7 @@ server {
 	}
 
 
-	location /admin
+	location /adminappleishop
 	{
 		index index.php;
 	}
@@ -38,20 +39,22 @@ server {
 
 	sendfile off;
 
-	location ~ \.php$ {
-    if (!-e $request_filename){
-        rewrite ^/(.+)$ /index.php?_route_=$1 last;
-    }
-    fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+	location ~ \.php$
+	{
+		if (!-e $request_filename)
+		{
+			rewrite ^/(.+)$ /index.php?_route_=$1 last;
+		}
+		fastcgi_split_path_info ^(.+?\.php)(/.*)$;
 
-    fastcgi_pass unix:/run/php/php7.4-fpm.sock;
-    fastcgi_index index.php;
-    include fastcgi_params;
-    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    fastcgi_intercept_errors on;
-    fastcgi_buffer_size 16k;
-    fastcgi_buffers 4 16k;
-}
+		fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+		fastcgi_index index.php;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_intercept_errors on;
+		fastcgi_buffer_size 16k;
+		fastcgi_buffers 4 16k;
+	}
 
 	location ~ /\.ht
 	{
@@ -63,17 +66,32 @@ server {
 		expires max;
 		log_not_found off;
 	}
+	error_page 404 /404.html;
+	error_page 500 502 503 504 403 /50x.html;
+
+	location = /index.php?route=error/not_found
+	{
+
+		root /var/www/html/opencart4011rus;
+		internal;
+	}
+
+	location = /custom_50x.html
+	{
+
+		root /var/www/html/opecart4011rus;
+		internal;
+	}
 
 
 	listen 443 ssl; # managed by Certbot
-	ssl_certificate /etc/letsencrypt/live/appleishop.ru/fullchain.pem; # managed by Certbot
-	ssl_certificate_key /etc/letsencrypt/live/appleishop.ru/privkey.pem; # managed by Certbot
+	ssl_certificate /etc/letsencrypt/live/appleishop.ru/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/appleishop.ru/privkey.pem;
 	include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
 	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
 
 }
-
 server {
     if ($host = www.appleishop.ru) {
         return 301 https://$host$request_uri;
