--- a/default.conf
+++ b/default.conf
@@ -1,12 +1,62 @@
 server
 {
-	server_name appleishop.ru www.appleishop.ru;
+    listen [::]:443 ssl http2 ipv6only=on default_server;
+    listen 443 ssl http2 default_server;
+	server_name appleishop.ru;
+
+
+	ssl_certificate /etc/letsencrypt/live/appleishop.ru/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/appleishop.ru/privkey.pem;
+	ssl_session_cache shared:le_nginx_SSL:1m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_timeout 5m;
+	ssl_buffer_size 1400;
+	ssl_ecdh_curve secp521r1:secp384r1:prime256v1;
+	ssl_session_tickets off;
+
+	ssl_protocols TLSv1.2 TLSv1.3;
+
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+
+	resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001];
+	resolver_timeout 5s;
+	ssl_stapling on;
+	ssl_stapling_verify on;
+	
+
 	root /var/www/html/opencart4011rus;
 	index index.php;
-	access_log off;
-	error_log /var/log/nginx/opencart_error.log;
+
+
+
+	add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
+	add_header X-Frame-Options SAMEORIGIN;
+	add_header X-Content-Type-Options nosniff;
+	add_header X-XSS-Protection "1; mode=block";
 
 	rewrite /adminappleishop$ $scheme://$host$uri/ permanent;
+	## Only allow these request methods ##
+     if ($request_method !~ ^(GET|HEAD|POST)$ ) {
+         return 444;
+     }
+	## Do not accept DELETE, SEARCH and other methods ##
+	## Block download agents ##
+     if ($http_user_agent ~* LWP::Simple|BBBike|wget) {
+            return 403;
+     }
+	##
+	## Block some robots ##
+     if ($http_user_agent ~* msnbot|scrapbot) {
+            return 403;
+     }
+	## Deny certain Referers ###
+     if ( $http_referer ~* (babes|forsale|girl|jewelry|love|nudit|organic|poker|porn|sex|teen) )
+     {
+         # return 404;
+         return 403;
+     }
+	##
 
 	location /
 	{
@@ -30,11 +80,11 @@ server
 
 	location = /favicon.ico
 	{
-		access_log off; log_not_found off;
+		log_not_found off;
 	}
 	location = /robots.txt
 	{
-		access_log off; log_not_found off;
+		log_not_found off;
 	}
 
 	sendfile off;
@@ -61,13 +111,13 @@ server
 		deny all;
 	}
 
-	location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$
+	location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg/woff2)$
 	{
 		expires max;
 		log_not_found off;
 	}
 	error_page 404 /404.html;
-	error_page 500 502 503 504 403 /50x.html;
+	error_page 500 502 503 504  /error.html;
 
 	location = /index.php?route=error/not_found
 	{
@@ -76,25 +126,33 @@ server
 		internal;
 	}
 
-	location = /custom_50x.html
-	{
-
-		root /var/www/html/opecart4011rus;
-		internal;
-	}
-
-
-	listen 443 ssl; # managed by Certbot
-	ssl_certificate /etc/letsencrypt/live/appleishop.ru/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/appleishop.ru/privkey.pem;
-	include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
-	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
-
-
 }
 server {
+	listen 443 ssl http2;
+	listen [::]:443 ssl http2;
+    server_name www.appleishop.ru;
+
+	ssl_certificate /etc/letsencrypt/live/appleishop.ru/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/appleishop.ru/privkey.pem;
+	ssl_session_cache shared:le_nginx_SSL:1m;
+	ssl_session_cache shared:SSL:50m;
+	ssl_session_timeout 5m;
+	ssl_buffer_size 1400;
+	ssl_ecdh_curve secp521r1:secp384r1:prime256v1;
+	ssl_session_tickets off;
+
+	ssl_protocols TLSv1.2 TLSv1.3;
+
+	ssl_prefer_server_ciphers on;
+	ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+
+    return 301 $scheme://appleishop.ru$request_uri;
+}
+server {
+    listen     80 http2;
+	listen [::]:80 http2;
     if ($host = www.appleishop.ru) {
-        return 301 https://$host$request_uri;
+        return 301 https://appleishop.ru$request_uri;
     } # managed by Certbot
 
 
@@ -102,8 +160,6 @@ server {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
-
-    listen 80;
     server_name appleishop.ru www.appleishop.ru;
     return 404; # managed by Certbot
 }
