--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,8 @@
 server
 {
-    listen [::]:443 ssl http2 ipv6only=on default_server;
-    listen 443 ssl http2 default_server;
+
+	listen [::]:443 ssl http2 ipv6only=on default_server;
+	listen 443 ssl http2 default_server;
 	server_name appleishop.ru;
 
 
@@ -19,118 +20,178 @@ server
 	ssl_prefer_server_ciphers on;
 	ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
 
-	resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001];
-	resolver_timeout 5s;
 	ssl_stapling on;
 	ssl_stapling_verify on;
-	
+	resolver [2001:4860:4860::8888] [2001:4860:4860::8844] 8.8.8.8 8.8.4.4 valid=600s;
+	resolver_timeout 10s;
+
 
 	root /var/www/html/opencart4011rus;
 	index index.php;
 
 
+	add_header X-Frame-Options "SAMEORIGIN" always;
+	add_header X-XSS-Protection "1; mode=block" always;
+	add_header X-Content-Type-Options "nosniff" always;
+	add_header Referrer-Policy "no-referrer-when-downgrade" always;
+	add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+	add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
-	add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
-	add_header X-Frame-Options SAMEORIGIN;
-	add_header X-Content-Type-Options nosniff;
-	add_header X-XSS-Protection "1; mode=block";
 
-	rewrite /adminappleishop$ $scheme://$host$uri/ permanent;
-	## Only allow these request methods ##
-     if ($request_method !~ ^(GET|HEAD|POST)$ ) {
-         return 444;
-     }
+	# rewrite /adminappleishop$ $scheme://$host$uri/ permanent;
 	## Do not accept DELETE, SEARCH and other methods ##
 	## Block download agents ##
-     if ($http_user_agent ~* LWP::Simple|BBBike|wget) {
-            return 403;
-     }
+	if ($http_user_agent ~* LWP::Simple|BBBike|wget)
+	{
+
+		return 403;
+	}
 	##
 	## Block some robots ##
-     if ($http_user_agent ~* msnbot|scrapbot) {
-            return 403;
-     }
-	## Deny certain Referers ###
-     if ( $http_referer ~* (babes|forsale|girl|jewelry|love|nudit|organic|poker|porn|sex|teen) )
-     {
-         # return 404;
-         return 403;
-     }
-	##
+	if ($http_user_agent ~* msnbot|scrapbot)
+	{
 
+		return 403;
+	}
+	## Deny certain Referers ###
+	if ( $http_referer ~* (babes|forsale|girl|jewelry|love|nudit|organic|poker|porn|sex|teen) )
+	{
+
+		# return 404;
+		return 403;
+	}
+	location = /sitemap.xml
+	{
+		rewrite ^(.*)$ /index.php?route=feed/google_sitemap break;
+	}
+
+	location = /googlebase.xml
+	{
+		rewrite ^(.*)$ /index.php?route=feed/google_base break;
+	}
 	location /
 	{
-		try_files $uri $uri/ @opencart;
+
+		try_files $uri @opencart;
 	}
-
-	location @opencart
-	{
-		rewrite ^/(.+)$ /index.php?_route_=$1 last;
-	}
-
-
-	location /adminappleishop
-	{
-		index index.php;
-	}
-
-	rewrite ^/sitemap.xml$ /index.php?route=feed/google_sitemap last;
-	rewrite ^/googlebase.xml$ /index.php?route=feed/google_base last;
-	rewrite ^/download/(.*) /index.php?route=error/not_found last;
-
-	location = /favicon.ico
-	{
-		log_not_found off;
-	}
-	location = /robots.txt
-	{
-		log_not_found off;
-	}
-
-	sendfile off;
-
-	location ~ \.php$
-	{
-		if (!-e $request_filename)
-		{
-			rewrite ^/(.+)$ /index.php?_route_=$1 last;
-		}
-		fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-
-		fastcgi_pass unix:/run/php/php8.1-fpm.sock;
-		fastcgi_index index.php;
-		include fastcgi_params;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_intercept_errors on;
-		fastcgi_buffer_size 16k;
-		fastcgi_buffers 4 16k;
-	}
-
-	location ~ /\.ht
+	# Make sure files with the following extensions do not get loaded by nginx because nginx would display the source code, and these files can contain PASSWORDS!
+	location ~* \.(engine|inc|info|ini|install|log|make|module|profile|test|po|sh|.*sql|theme|tpl(\.php)?|xtmpl)$|^(\..*|Entries.*|Repository|Root|Tag|Template)$|\.php_
 	{
 		deny all;
 	}
-
-	location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg/woff2)$
+	location @opencart
 	{
-		expires max;
+
+		rewrite ^/(.+)$ /index.php?_route_=$1 last;
+	}
+	location = /favicon.ico
+	{
+
 		log_not_found off;
+		access_log off;
 	}
-	error_page 404 /404.html;
-	error_page 500 502 503 504  /error.html;
-
-	location = /index.php?route=error/not_found
+	location = /robots.txt
 	{
 
-		root /var/www/html/opencart4011rus;
-		internal;
+		allow all;
+		log_not_found off;
+		access_log off;
+	}
+	location ~* \.(?:3gp|gif|jpg|jpe?g|png|ico|wmv|avi|asf|asx|mpg|mpeg|mp4|pls|mp3|mid|wav|swf|flv|txt|js|css|exe|zip|tar|rar|gz|tgz|bz2|uha|7z|doc|docx|xls|xlsx|pdf|iso|woff|woff2|eot|otf|ttf)$
+	{
+
+		# Some basic cache-control for static files to be sent to the browser
+		expires max;
+		add_header Pragma public;
+		add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+	}
+	location ~ /\.
+	{
+
+		access_log off;
+		log_not_found off;
+		deny all;
 	}
 
+	location ~ ~$
+	{
+
+		access_log off;
+		log_not_found off;
+		deny all;
+	}
+	location ~* /(?:cache|logs|image|download)/.*\.php$
+	{
+
+		deny all;
+	}
+	location ~ [^/]\.php(/|$)
+	{
+
+		# Regex to split $uri to $fastcgi_script_name and $fastcgi_path
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+		# Check that the PHP script exists before passing it
+		try_files $fastcgi_script_name =404;
+
+		# Bypass the fact that try_files resets $fastcgi_path_info
+		# see: http://trac.nginx.org/nginx/ticket/321
+		set $path_info $fastcgi_path_info;
+		fastcgi_param PATH_INFO $path_info;
+
+		fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+		fastcgi_index index.php;
+		# Uncomment if site is HTTPS
+		#fastcgi_param HTTPS on;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param QUERY_STRING $query_string;
+		fastcgi_param REQUEST_METHOD $request_method;
+		fastcgi_param CONTENT_TYPE $content_type;
+		fastcgi_param CONTENT_LENGTH $content_length;
+
+		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+		fastcgi_param REQUEST_URI $request_uri;
+		fastcgi_param DOCUMENT_URI $document_uri;
+		fastcgi_param DOCUMENT_ROOT $document_root;
+		fastcgi_param SERVER_PROTOCOL $server_protocol;
+		fastcgi_param HTTPS $https if_not_empty;
+
+		fastcgi_param GATEWAY_INTERFACE CGI/1.1;
+		fastcgi_param SERVER_SOFTWARE nginx/$nginx_version;
+
+		fastcgi_param REMOTE_ADDR $remote_addr;
+		fastcgi_param REMOTE_PORT $remote_port;
+		fastcgi_param SERVER_ADDR $server_addr;
+		fastcgi_param SERVER_PORT $server_port;
+		fastcgi_param SERVER_NAME $server_name;
+
+		# PHP only, required if PHP was built with --enable-force-cgi-redirect
+		fastcgi_param REDIRECT_STATUS 200;
+	}
+	error_page 404 /error.html;
+	error_page 500 502 503 504 403 /error.html;
+	# location = /index.php?route=error/not_found
+	# {
+
+	# 	root /var/www/html/opencart4011rus;
+	# 	internal;
+	# }
 }
-server {
+server
+{
+	listen 80 http2;
+	# listen [::]:80 http2;
+	server_name www.appleishop.ru appleishop.ru;
+
+	return 301 https://appleishop.ru$request_uri;
+}
+
+server
+{
 	listen 443 ssl http2;
-	listen [::]:443 ssl http2;
-    server_name www.appleishop.ru;
+	# listen [::]:443 ssl http2;
+
+	server_name www.appleishop.ru;
 
 	ssl_certificate /etc/letsencrypt/live/appleishop.ru/fullchain.pem;
 	ssl_certificate_key /etc/letsencrypt/live/appleishop.ru/privkey.pem;
@@ -146,20 +207,5 @@ server {
 	ssl_prefer_server_ciphers on;
 	ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
 
-    return 301 $scheme://appleishop.ru$request_uri;
-}
-server {
-    listen     80 http2;
-	listen [::]:80 http2;
-    if ($host = www.appleishop.ru) {
-        return 301 https://appleishop.ru$request_uri;
-    } # managed by Certbot
-
-
-    if ($host = appleishop.ru) {
-        return 301 https://$host$request_uri;
-    } # managed by Certbot
-
-    server_name appleishop.ru www.appleishop.ru;
-    return 404; # managed by Certbot
+	return 301 https://appleishop.ru$request_uri;
 }
