--- a/nginx.conf
+++ b/nginx.conf
@@ -1,82 +1,79 @@
 
 user www-data;
 worker_processes auto;
-worker_cpu_affinity auto;
-error_log /var/log/nginx/error.log notice;
+worker_rlimit_nofile 65535;
+error_log /dev/null crit;
+
 pid /var/run/nginx.pid;
 
 
-events {
-	worker_connections 16384;
-    multi_accept on;
-    use epoll;
+events
+{
+	worker_connections 65535;
+	multi_accept on;
 }
 
 
-http {
-    server_names_hash_bucket_size 64;
+http
+{
+	server
+	{
+		server_name _;
+		return 444;
+	}
+	map $request_method $bad_method
+	{
+		default 1;
+		~(?i)(GET|HEAD|POST) 0;
+	}
+	server_names_hash_bucket_size 64;
 	server_tokens off;
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
-
-	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-	'$status $body_bytes_sent "$http_referer" '
-	'"$http_user_agent" "$http_x_forwarded_for"';
-
 	access_log off;
-    error_log /var/log/nginx/opencart_error.log;
 
-	client_max_body_size 50M;
-    client_body_buffer_size 1m;
-    client_body_timeout 15;
-    client_header_timeout 15;
-	client_header_buffer_size 1k;
+	log_format main_ext '$remote_addr - $remote_user [$time_local] "$request" '
+	'$status $body_bytes_sent "$http_referer" '
+	'"$http_user_agent" "$http_x_forwarded_for" '
+	'"$host" sn="$server_name" '
+	'rt=$request_time '
+	'ua="$upstream_addr" us="$upstream_status" '
+	'ut="$upstream_response_time" ul="$upstream_response_length" '
+	'cs=$upstream_cache_status' ;
+
+
+	client_max_body_size 25M;
+	client_body_buffer_size 1m;
+	client_body_timeout 15;
+	client_header_timeout 15;
+	client_header_buffer_size 4k;
 	large_client_header_buffers 2 1k;
-    keepalive_timeout 65;
-    send_timeout 15;
-    sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
+	keepalive_timeout 65;
+	send_timeout 15;
+
+	sendfile on;
+	tcp_nopush on;
+	tcp_nodelay on;
 
 	gzip on;
 	gzip_disable "msie6";
 
 	gzip_vary on;
 	gzip_proxied any;
-	gzip_comp_level 6;
+	gzip_comp_level 4;
 	gzip_buffers 16 8k;
 	gzip_http_version 1.1;
 	gzip_min_length 256;
-	gzip_types
-	application/atom+xml
-	application/geo+json
-	application/javascript
-	application/x-javascript
-	application/json
-	application/ld+json
-	application/manifest+json
-	application/rdf+xml
-	application/rss+xml
-	application/xhtml+xml
-	application/xml
-	font/eot
-	font/otf
-	font/ttf
-	image/svg+xml
-	text/css
-	text/javascript
-	text/plain
-	text/xml;
+	gzip_types application/atom+xml application/geo+json application/javascript application/x-javascript application/json application/ld+json application/manifest+json application/rdf+xml application/rss+xml application/xhtml+xml application/xml font/eot font/otf font/ttf font/woff2 image/svg+xml text/css text/javascript text/plain text/xml;
 
-        #Simple DOS mitigation
-    ##Max c/s by ip
-    limit_conn_zone $binary_remote_addr zone=limit_per_ip:10m;
-    limit_conn limit_per_ip 40;
+	#Simple DOS mitigation
+	##Max c/s by ip
+	limit_conn_zone $binary_remote_addr zone=limit_per_ip:10m;
+	limit_conn limit_per_ip 40;
 
-    ##Max rq/s by ip
-    limit_req_zone $binary_remote_addr zone=allips:10m rate=400r/s;
-    limit_req zone=allips burst=400 nodelay;
-
+	##Max rq/s by ip
+	limit_req_zone $binary_remote_addr zone=allips:10m rate=400r/s;
+	limit_req zone=allips burst=400 nodelay;
 
 
 	proxy_hide_header X-Powered-By;
