sgi params as a singe file

--- a/default.conf
+++ b/default.conf
@@ -26,7 +26,7 @@ server
 	resolver_timeout 10s;
 
 
-	root /var/www/html/opencart4011rus;
+	root /var/www/html/ocStore3037;
 	index index.php;
 
 
@@ -60,10 +60,10 @@ server
 		# return 404;
 		return 403;
 	}
-	location = /sitemap.xml
-	{
-		rewrite ^(.*)$ /index.php?route=feed/google_sitemap break;
-	}
+	location = /sitemap.xml {
+    allow all;
+    rewrite ^/(.*)$ /index.php?route=extension/feed/simple_google_sitemap last;
+}
 
 	location = /googlebase.xml
 	{
@@ -72,7 +72,7 @@ server
 	location /
 	{
 
-		try_files $uri @opencart;
+		try_files $uri $uri/ @opencart;
 	}
 	# Make sure files with the following extensions do not get loaded by nginx because nginx would display the source code, and these files can contain PASSWORDS!
 	location ~* \.(engine|inc|info|ini|install|log|make|module|profile|test|po|sh|.*sql|theme|tpl(\.php)?|xtmpl)$|^(\..*|Entries.*|Repository|Root|Tag|Template)$|\.php_
@@ -125,7 +125,7 @@ server
 
 		deny all;
 	}
-	location ~ [^/]\.php(/|$)
+	location ~ \.php$
 	{
 
 		# Regex to split $uri to $fastcgi_script_name and $fastcgi_path
@@ -139,43 +139,16 @@ server
 		set $path_info $fastcgi_path_info;
 		fastcgi_param PATH_INFO $path_info;
 
-		fastcgi_pass unix:/run/php/php8.1-fpm.sock;
+		fastcgi_pass unix:/run/php/php7.4-fpm.sock;
 		fastcgi_index index.php;
 		# Uncomment if site is HTTPS
 		#fastcgi_param HTTPS on;
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param QUERY_STRING $query_string;
-		fastcgi_param REQUEST_METHOD $request_method;
-		fastcgi_param CONTENT_TYPE $content_type;
-		fastcgi_param CONTENT_LENGTH $content_length;
-
-		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-		fastcgi_param REQUEST_URI $request_uri;
-		fastcgi_param DOCUMENT_URI $document_uri;
-		fastcgi_param DOCUMENT_ROOT $document_root;
-		fastcgi_param SERVER_PROTOCOL $server_protocol;
-		fastcgi_param HTTPS $https if_not_empty;
-
-		fastcgi_param GATEWAY_INTERFACE CGI/1.1;
-		fastcgi_param SERVER_SOFTWARE nginx/$nginx_version;
-
-		fastcgi_param REMOTE_ADDR $remote_addr;
-		fastcgi_param REMOTE_PORT $remote_port;
-		fastcgi_param SERVER_ADDR $server_addr;
-		fastcgi_param SERVER_PORT $server_port;
-		fastcgi_param SERVER_NAME $server_name;
-
-		# PHP only, required if PHP was built with --enable-force-cgi-redirect
-		fastcgi_param REDIRECT_STATUS 200;
+		include fastcgi_params;
 	}
 	error_page 404 /error.html;
 	error_page 500 502 503 504 403 /error.html;
-	# location = /index.php?route=error/not_found
-	# {
 
-	# 	root /var/www/html/opencart4011rus;
-	# 	internal;
-	# }
 }
 server
 {
